--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -11,6 +11,9 @@ dependencies = [
   "open3d==0.18.0",
   "numpy==1.26.4",
   "xhtml2pdf==0.2.15",
+  "prometheus-client==0.20.0",
+  "opentelemetry-api==1.26.0",
+  "opentelemetry-sdk==1.26.0",
 ]
 
 
