--- a/configs/thresholds.yaml
+++ b/configs/thresholds.yaml
@@ -8,9 +8,12 @@ ingest:
 registration:
   icp_max_iters: 50
   icp_rmse_gate: 0.10
+  voxel_down_m: 0.05
+  robust_kernel: huber
 
 segmentation:
   min_confidence: 0.6
+  batch_size: 1
 
 change_detection:
   min_voxel_size_m: 0.10
