--- a/infra/compose/docker-compose.yml
+++ b/infra/compose/docker-compose.yml
@@ -100,10 +100,37 @@ services:
     depends_on:
       - api
 
+  prometheus:
+    image: prom/prometheus:v2.55.0
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    ports:
+      - "9090:9090"
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:9090/-/ready" ]
+      interval: 15s
+      timeout: 5s
+      retries: 20
+    depends_on:
+      - api
+
+  grafana:
+    image: grafana/grafana:11.1.3
+    ports:
+      - "3000:3000"
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:3000/login" ]
+      interval: 15s
+      timeout: 5s
+      retries: 20
+    depends_on:
+      - prometheus
+
 networks:
   default:
     name: roborouter
 volumes:
   minio-data:
   pg-data:
+  grafana-data:
 
