--- a/configs/thresholds.yaml
+++ b/configs/thresholds.yaml
@@ -1,3 +1,7 @@
+rmse_max: 0.1
+inlier_ratio_min: 0.7
+miou_min: 0.7
+change_f1_min: 0.7
 # Default thresholds (override per profile in production)
 ingest:
   sor_stddev_mult: 1.0
