Scaffolds: Helm chart, values, deployment; DVC stages; Potree progress UI

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,4 +1,13 @@
 stages:
+  preprocess:
+    cmd: echo "preprocess placeholder"
+    deps: []
+    outs: [data/processed]
+  train:
+    cmd: echo "train placeholder"
+    deps: [data/processed]
+    outs: [models]
+stages:
   ingest:
     cmd: python -m scripts.pipeline ingest
     outs: []
