Packaging: API Dockerfile/requirements; docker-compose with MinIO

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,41 @@ on:
   push:
     branches: [ develop ]
   pull_request:
+    branches: [ develop ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install fastapi uvicorn[standard] pydantic-settings sqlalchemy minio prometheus-client pytest
+
+      - name: Lint (basic)
+        run: |
+          python -m pyflakes apps || true
+
+      - name: Run tests
+        env:
+          ROBOROUTER_ORCHESTRATOR: stub
+        run: |
+          pytest -q
+
+name: CI
+
+on:
+  push:
+    branches: [ develop ]
+  pull_request:
     branches: [ develop, main ]
 
 jobs:
