--- a/deploy/helm/roborouter/values.yaml
+++ b/deploy/helm/roborouter/values.yaml
@@ -13,3 +13,10 @@ env:
   ROBOROUTER_ORCHESTRATOR: stub
   ROBOROUTER_RATE_LIMIT_RPM: "120"
 
+ingress:
+  enabled: false
+  host: roborouter.local
+  tls:
+    enabled: false
+    secretName: roborouter-tls
+
