Security: require API key for export and pipeline; add tests

--- a/deploy/helm/roborouter/templates/ingress.yaml
+++ b/deploy/helm/roborouter/templates/ingress.yaml
@@ -15,6 +15,12 @@ spec:
                 name: {{ include "roborouter.fullname" . }}
                 port:
                   number: {{ .Values.service.port }}
+  {{- if .Values.ingress.tls.enabled }}
+  tls:
+    - secretName: {{ .Values.ingress.tls.secretName | quote }}
+      hosts:
+        - {{ .Values.ingress.host | quote }}
+  {{- end }}
 {{- end }}
 
 
