Export: potree manifest upload; Tests: /metrics endpoint and export auth

--- a/deploy/helm/roborouter/values.yaml
+++ b/deploy/helm/roborouter/values.yaml
@@ -12,6 +12,8 @@ resources: {}
 env:
   ROBOROUTER_ORCHESTRATOR: stub
   ROBOROUTER_RATE_LIMIT_RPM: "120"
+  ROBOROUTER_OTEL_ENABLED: "false"
+  ROBOROUTER_OTEL_OTLP_URL: ""
 
 ingress:
   enabled: false
