--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,93 +4,24 @@ on:
   push:
     branches: [ develop ]
   pull_request:
-    branches: [ develop ]
 
 jobs:
-  build:
+  api:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-
-      - name: Install dependencies
+      - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install fastapi uvicorn[standard] pydantic-settings sqlalchemy minio prometheus-client pytest
-
-      - name: Lint (basic)
-        run: |
-          python -m pyflakes apps || true
-
-      - name: Run tests
-        env:
-          ROBOROUTER_ORCHESTRATOR: stub
-        run: |
-          pytest -q
-
-name: CI
-
-on:
-  push:
-    branches: [ develop ]
-  pull_request:
-    branches: [ develop, main ]
-
-jobs:
-  build-test:
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    env:
-      ROBOROUTER_DATABASE_URL: sqlite+pysqlite:///./roborouter_ci.db
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
-      - name: Cache pip
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml', '**/requirements*.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      - name: Install dev tools
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
-
-      - name: Install API app
-        run: |
-          pip install -e apps/api
-
-      - name: Lint (ruff)
-        run: ruff check --format grouped .
-
-      - name: Format check (black)
-        run: black --check .
-
-      - name: Type check (mypy)
+          pip install -r apps/api/requirements.txt -r requirements-dev.txt
+      - name: Lint
+        run: ruff check apps/api
+      - name: Types
         run: mypy apps/api
-
-      - name: Tests (subset, with coverage)
-        run: |
-          pytest -q tests/integration/test_health.py tests/integration/test_metrics.py tests/unit --cov=apps/api --cov-report=term-missing --cov-fail-under=70
-
-      - name: Upload coverage report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: ./.coverage*
+      - name: Tests
+        run: pytest -q --cov=apps/api --cov-fail-under=70
 
 
